--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o smm_database.o
-LINKOBJ  = main.o smm_database.o
+OBJ      = main.o smm_database.o "../../../바탕\ 화면/수정본/새\ 폴더/smm_object.o"
+LINKOBJ  = main.o smm_database.o "../../../바탕 화면/수정본/새 폴더/smm_object.o"
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -29,3 +29,6 @@ main.o: main.c
 
 smm_database.o: smm_database.c
 	$(CC) -c smm_database.c -o smm_database.o $(CFLAGS)
+
+"../../../바탕\ 화면/수정본/새\ 폴더/smm_object.o": ../../../바탕\ 화면/수정본/새\ 폴더/smm_object.c
+	$(CC) -c "../../../바탕 화면/수정본/새 폴더/smm_object.c" -o "../../../바탕 화면/수정본/새 폴더/smm_object.o" $(CFLAGS)
